--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Image Generator HTML CSS and JavaScript | CodingNepal</title>
+  <title>PIXELGEN.AI</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
 <body>
   <section class="image-generator">
     <div class="content">
-      <h1>AI Image Generator Tool JavaScript</h1>
+      <h1>AI Image Generator Tool</h1>
       <p>Convert your text into an image within a second using this
-        JavaScript-powered AI Image Generator tool.</p>
+        AI-powered Image Generator tool.</p>
       <form action="#" class="generate-form">
         <input class="prompt-input" type="text" placeholder="Describe what you want to see" required>
         <div class="controls">
@@ -29,10 +29,10 @@
     </div>
   </section>
   <section class="image-gallery">
-    <div class="img-card"><img src="images/img-1.jpg" alt="image"></div>
-    <div class="img-card"><img src="images/img-2.jpg" alt="image"></div>
-    <div class="img-card"><img src="images/img-3.jpg" alt="image"></div>
-    <div class="img-card"><img src="images/img-4.jpg" alt="image"></div>
+    <div class="img-card"><img src="img-1.jpg" alt="image"></div>
+    <div class="img-card"><img src="img-2.jpg" alt="image"></div>
+    <div class="img-card"><img src="img-3.jpg" alt="image"></div>
+    <div class="img-card"><img src="img-4.jpg" alt="image"></div>
   </section>
 </body>
 </html>
